src/test/ui/unboxed-closures/unboxed-closures-infer-fnmut-missing-mut.stderr
error[E0596]: cannot borrow `tick` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closures-infer-fnmut-missing-mut.rs:7:5
   |
LL |     let tick = || counter += 1;
   |         ---- help: consider changing this to be mutable: `mut tick`
LL |     tick();
   |     ^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
